--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "axios": "^1.2.2",
+    "fontawesome": "^5.6.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
